# pruebalbamonitor

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  INICIO_RAPIDO.md  README.md  config.default.toml  config.toml.example  docker-compose.yml  lbamonitor.bat  run-simulation.bat  run-tests.bat  start-windows.bat
.github/workflows/: ci.yml  rdp.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f6b1a312fd00_initial_schema.py
backend/lbamonitor/: __init__.py
backend/lbamonitor/api/: __init__.py  deps.py  main.py
backend/lbamonitor/api/middleware/: __init__.py  auth_middleware.py
backend/lbamonitor/api/routes/: admin.py  auth.py  backups.py  billings.py  catalog.py  clients.py  copies.py  health.py  inserted_drives.py  license_router.py  pc_datetime_changes.py  sessions.py  settings_router.py  statistics.py  usb_devices.py  users.py  ws.py
backend/lbamonitor/api/schemas/: __init__.py  billing.py  catalog.py  clients.py  common.py  devices.py  files.py  license.py  settings.py  statistics.py  system.py  users.py
backend/lbamonitor/cli/: __init__.py  __main__.py
backend/lbamonitor/core/: __init__.py  config.py  db.py  enums.py  migrations.py
backend/lbamonitor/core/cache/: __init__.py  memory_cache.py
backend/lbamonitor/core/models/: __init__.py
backend/lbamonitor/core/repositories/: __init__.py  base.py  business_repository.py  device_repository.py  file_repository.py  user_repository.py
backend/lbamonitor/core/security/: __init__.py  auth.py  rate_limiter.py
backend/lbamonitor/core/services/: __init__.py  backup_engine.py  invoice_engine.py  license_engine.py  license_state.py  pdf_engine.py  plugin_manager.py  pricing_engine.py  scheduler.py  statistics_service.py
backend/lbamonitor/monitor/: __init__.py  __main__.py  categorizer.py  clock_monitor.py  device_change_listener.py  file_watcher.py  mtp_monitor.py  publicity_copier.py  service.py  session_heartbeat.py  usb_monitor.py  wmi_utils.py
backend/lbamonitor/utils/: __init__.py  formatters.py  helpers.py  logging_setup.py
backend/lbamonitor/web/: __init__.py  routes.py
backend/lbamonitor/web/static/: dashboard.js  style.css
backend/lbamonitor/web/templates/: base.html  catalog.html  dashboard.html  login.html
backend/plugins/: daily_closure_plugin.py  example_plugin.py  excel_report_plugin.py  receipt_log_plugin.py  session_stats_plugin.py  sound_alert_plugin.py  telegram_notify_plugin.py  usb_alert_popup_plugin.py
backend/scripts/: simulate_full_flow.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_endpoints.py  test_api_health.py  test_auth_endpoints.py
backend/tests/unit/: test_auth.py  test_cache.py  test_categorizer.py  test_clock_monitor.py  test_file_watcher.py  test_license.py  test_models.py  test_publicity_copier.py  test_rate_limiter.py  test_utils.py  test_wmi_utils.py
desktop_qt/: __init__.py  main.py  requirements.txt
desktop_qt/api/: client.py  ws_client.py
desktop_qt/assets/: style.qss
desktop_qt/ui/: billing_tab.py  catalog_tab.py  checkout_popup.py  clients_tab.py  dashboard_tab.py  license_tab.py  login_dialog.py  logs_tab.py  main_window.py  settings_tab.py  usb_tab.py
docs/: MIRON-analysis.md  TECHNICAL_REFERENCE.md  plugins.md  research.md
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
installer/msi/: lbamonitor.iss
installer/nssm/: install-service.ps1  uninstall-service.ps1
installer/portable/: build.ps1
installer/pyinstaller/: cli.spec  desktop.spec  (+1 more)
scripts/: build-all.ps1  dev-run.sh  sign_plugins.py
web_legacy/: app.py
(+24 files in other folders)
